--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ideaForge.Pages.DashboardPages"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
       xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
       xmlns:vm="clr-namespace:ideaForge.ViewModels"
               
@@ -564,8 +565,11 @@
                 </Button>
             </StackPanel>
         </StackPanel>
-
-    </Grid>
+                <mah:ProgressRing
+                    IsActive="{Binding IsBusy}" 
+                    Foreground="#91C84F" 
+                    />
+            </Grid>
 
         </ScrollViewer>
     </UserControl.Content>
