--- a/ideaForge/Pages/DashboardPages/PendingRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/PendingRidePage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ideaForge.Pages.DashboardPages"
-
+xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
       xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
       xmlns:vm="clr-namespace:ideaForge.ViewModels"
               
@@ -218,7 +218,7 @@
                                         Background="#F5F5F5"
                                         BorderBrush="#A9ABB1" Margin="15,0,15,15" Height="35" Width="130" BorderThickness="1" CornerRadius="5">
                                                 <dotNetKitControls:AutoCompleteComboBox
-    SelectedValuePath="id"
+    SelectedValuePath="statusId"
                         DisplayMemberPath="name"
     TextSearch.TextPath="name"
     ItemsSource="{Binding RideStatuses}"
@@ -407,7 +407,10 @@
                         </Button>
                     </StackPanel>
                 </StackPanel>
-
+                <mah:ProgressRing
+                    IsActive="{Binding IsBusy}" 
+                    Foreground="#91C84F" 
+                    />
             </Grid>
 
         </ScrollViewer>
