--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ideaForge.Pages.DashboardPages"
-             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Class="ideaForge.Pages.DashboardPages.Requests"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
+    x:Class="ideaForge.Pages.DashboardPages.Requests"
              mc:Ignorable="d" 
     xmlns:vm="clr-namespace:ideaForge.ViewModels"
              d:DesignHeight="450" d:DesignWidth="800">
