--- a/ideaForge/Pages/DashboardPages/IFDockPage.xaml
+++ b/ideaForge/Pages/DashboardPages/IFDockPage.xaml
@@ -326,10 +326,10 @@
                             VerticalAlignment="Center"
                             BorderBrush="Transparent"
                             Margin="2"
-    SelectedValuePath="city_Name"
-                        DisplayMemberPath="city_Name"
-    TextSearch.TextPath="city_Name"
-    ItemsSource="{Binding CityList}"
+    SelectedValuePath="id"
+                        DisplayMemberPath="cityName"
+    TextSearch.TextPath="cityName"
+    ItemsSource="{Binding }"
      SelectedValue="{Binding RegisterModel.city}"    
                             Height="30"
    />
