--- a/ideaForge/Popups/DockAreaPropup.xaml
+++ b/ideaForge/Popups/DockAreaPropup.xaml
@@ -17,9 +17,11 @@
         Title="DockAreaPropup" Height="250" Width="300"
         Background="Transparent"
         AllowsTransparency="True"
-        
+        xmlns:vm="clr-namespace:ideaForge.ViewModels"
         >
-
+    <Window.DataContext>
+        <vm:IFDockViewModel/>
+    </Window.DataContext>
     <Grid Background="Transparent" Opacity="100">
 
         <Grid Grid.Row="0"
@@ -49,11 +51,11 @@
             <dotNetKitControls:AutoCompleteComboBox
                 Grid.Row="2"
                 Margin="10,0,10,10"
-    SelectedValuePath="city_Name"
-                        DisplayMemberPath="city_Name"
-    TextSearch.TextPath="city_Name"
-    ItemsSource="{Binding CityList}"
-     SelectedValue="{Binding RegisterModel.city}"                   
+    SelectedValuePath="id"
+                        DisplayMemberPath="cityName"
+    TextSearch.TextPath="cityName"
+    ItemsSource="{Binding PilotLocations}"
+     SelectedValue="{Binding SelectedLocationId}"                   
    />
             <Button
                 Grid.Row="3"
