--- a/ideaForge/Popups/MessageBox.xaml
+++ b/ideaForge/Popups/MessageBox.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ideaForge.Popups.ErrorMessageBox"
+﻿<Window x:Class="ideaForge.Popups.SuccessMessageBox"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,7 +14,7 @@
         ShowActivated="True"
         Topmost="True"
         Title="DockAreaPropup" Height="164" Width="300"
-        AllowsTransparency="True">
+        AllowsTransparency="True" >
     <Grid Background="Transparent" Opacity="100">
 
         <Grid.RowDefinitions>
@@ -25,7 +25,8 @@
         </Grid.RowDefinitions>
 
         <Image Grid.Row="0"
-            Source="/Images/ErrorBack.png" 
+            Source="/Images/SuccessBack.png" 
+               
                HorizontalAlignment="Center" 
                VerticalAlignment="Center"
                Width="80"/>
@@ -54,35 +55,60 @@
                 FontSize="14" 
                 FontWeight="Bold" 
                 FontFamily="Segoe UI" 
-                Content="Error" 
+                Content="Success" 
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"/>
 
-        <Label 
-             x:Name="lblMessage"
-            x:FieldModifier="public"
-                Grid.Row="2" 
+        <StackPanel Grid.Row="2" VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Orientation="Horizontal">
+            <Label
+                x:FieldModifier="public"
+                x:Name="lblMessage"
+                Content="User registration "
+                Foreground="Black" 
                 FontSize="10" 
-                FontWeight="Normal" 
+                Padding="0"
                 FontFamily="Segoe UI" 
-                Content="Please contact your system administrator." 
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"/>
+                FontWeight="Normal"
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Left"/>
+            <Label
+                x:Name="lblSuccess"
+                Content="successful"
+                Foreground="#91C84F" 
+                FontSize="10" 
+                Padding="0"
+                FontFamily="Segoe UI" 
+                FontWeight="Normal"
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Left"/>
+            <Label
+                Content="."
+                Foreground="Black" 
+                FontSize="10" 
+                Padding="0"
+                FontFamily="Segoe UI" 
+                FontWeight="Normal"
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Left"/>
+
+        </StackPanel>
 
         <Button Grid.Row="3"
                 Click="Button_Click"
                 Content="OK">
             <Button.Template>
                 <ControlTemplate>
-                    <Border Background="#D42424"
+                    <Border Background="#91C84F"
                             CornerRadius="3" 
                             Margin="90,0" 
                             VerticalAlignment="Top"
                             BorderBrush="Black"
                             Height="25">
                         <TextBlock 
-                            Foreground="White"
                             Text="OK" 
+                            Foreground="White"
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Center"/>
                     </Border>
