--- a/ideaForge/Pages/LoginPages/MainWindow.xaml
+++ b/ideaForge/Pages/LoginPages/MainWindow.xaml
@@ -26,7 +26,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Image Grid.Row="0" Source="/Images/logo.png"/>
+        <Image Grid.Row="0" Source="/Images/flightLogo.png"/>
         <Label Grid.Row="2" Grid.Column="0" Content="Pilot Login" VerticalAlignment="Center" HorizontalAlignment="Left" 
                FontSize="40" FontFamily="Segoe UI" Foreground="Black" FontWeight="SemiBold"/>
         <Label Grid.Row="3" Grid.Column="0" Content="Contact Number/Email" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"/>
