--- a/ideaForge/Popups/MessageBox.xaml
+++ b/ideaForge/Popups/MessageBox.xaml
@@ -1,120 +1,134 @@
-﻿<Window x:Class="ideaForge.Popups.SuccessMessageBox"
+﻿<Window x:Class="ideaForge.Popups.MessageBox"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ideaForge.Popups"
+        xmlns:local="clr-namespace:ideaForge"
         mc:Ignorable="d"
-        WindowStyle="None"
-        WindowChrome.ResizeGripDirection="None"
-        WindowState="Normal"
-        WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize"
-        ShowInTaskbar="False"
-        ShowActivated="True"
-        Topmost="True"
-        Title="DockAreaPropup" Height="164" Width="300"
-        AllowsTransparency="True" >
-    <Grid Background="Transparent" Opacity="100">
+  
+        Background="{x:Null}"
+        TextElement.Foreground="Gray"
+        TextElement.FontWeight="Regular"
+     TextOptions.TextFormattingMode="Ideal"
+     TextOptions.TextRenderingMode="Auto"
+     FontFamily="Open Sans"
+        Title="CMessageBox" 
+        Height="150" Width="300" WindowStyle="None" 
+        
+        AllowsTransparency="True" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Closing="Window_Closing">
+    <!--<Window.Effect>
+        <DropShadowEffect BlurRadius="10" Color="Black" ShadowDepth="4" Opacity=".7" />
+    </Window.Effect>-->
+    <Border Padding="10" CornerRadius="8" Background="White">
+        <Grid Background="Transparent" Opacity="100">
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="4*"/>
-            <RowDefinition Height="25"/>
-            <RowDefinition Height="25"/>
-            <RowDefinition Height="30"/>
-        </Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
 
-        <Image Grid.Row="0"
-            Source="/Images/SuccessBack.png" 
-               
+            <Image Grid.Row="0" 
+                   Source="/Images/SuccessBack.png" 
+               x:Name="msgLogo"
                HorizontalAlignment="Center" 
                VerticalAlignment="Center"
                Width="80"/>
-        <Button Click="btnPopupClose_Click">
-            <Button.Template>
-                <ControlTemplate>
-                    <Border Background="Transparent" 
+            <Button Click="btnPopupClose_Click">
+                <Button.Template>
+                    <ControlTemplate>
+                        <Border Background="Transparent" 
               HorizontalAlignment="Right"
               VerticalAlignment="Top"
                 Width="20"
                 Height="20"
                 Margin="0,5,3,0"
               >
-                        <TextBlock 
-                
-                Text="X" 
+                            <Image 
+                Margin="5"
+                Source="/Images/Cancel.png" 
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
 
-        <Label 
+            <TextBlock 
+                x:Name="txtTitle"
                 Grid.Row="1" 
                 FontSize="14" 
                 FontWeight="Bold" 
                 FontFamily="Segoe UI" 
-                Content="Success" 
+                Text="Success" 
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"/>
 
-        <StackPanel Grid.Row="2" VerticalAlignment="Center"
+            <StackPanel Grid.Row="2" VerticalAlignment="Center"
                     HorizontalAlignment="Center"
                     Orientation="Horizontal">
-            <Label
+                <TextBlock
                 x:FieldModifier="public"
-                x:Name="lblMessage"
-                Content="User registration "
+                 
+                    
+                x:Name="txtMessage"
+                Text="User registration "
                 Foreground="Black" 
                 FontSize="10" 
                 Padding="0"
                 FontFamily="Segoe UI" 
-                FontWeight="Normal"
+                FontWeight="SemiBold"
                 VerticalAlignment="Center" 
                 HorizontalAlignment="Left"/>
-            <Label
-                x:Name="lblSuccess"
-                Content="successful"
+                <TextBlock
+                x:Name="lblColorMessage"
+                Text="successful"
                 Foreground="#91C84F" 
                 FontSize="10" 
                 Padding="0"
                 FontFamily="Segoe UI" 
-                FontWeight="Normal"
+                FontWeight="SemiBold"
                 VerticalAlignment="Center" 
                 HorizontalAlignment="Left"/>
-            <Label
+                <Label
                 Content="."
-                Foreground="Black" 
+                Foreground="#91C84F" 
                 FontSize="10" 
                 Padding="0"
                 FontFamily="Segoe UI" 
-                FontWeight="Normal"
+                FontWeight="SemiBold"
                 VerticalAlignment="Center" 
                 HorizontalAlignment="Left"/>
 
-        </StackPanel>
+            </StackPanel>
 
-        <Button Grid.Row="3"
-                Click="Button_Click"
+            <Button x:Name="btnOk" Grid.Row="3"
+                Click="BntOk_Click"
                 Content="OK">
-            <Button.Template>
-                <ControlTemplate>
-                    <Border Background="#91C84F"
+                <Button.Template>
+                    <ControlTemplate>
+                        <Border Background="#91C84F"
                             CornerRadius="3" 
                             Margin="90,0" 
                             VerticalAlignment="Top"
                             BorderBrush="Black"
                             Height="25">
-                        <TextBlock 
+                            <TextBlock 
                             Text="OK" 
                             Foreground="White"
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
 
-    </Grid>
+        </Grid>
+        <!--<Border.Effect>
+            <DropShadowEffect Color="#000" BlurRadius="1" Opacity=".7" >
+                
+            </DropShadowEffect>
+        </Border.Effect>-->
+    </Border>
 </Window>
