--- a/ideaForge/Pages/LoginPages/MainWindow.xaml
+++ b/ideaForge/Pages/LoginPages/MainWindow.xaml
@@ -30,7 +30,12 @@
         <Label Grid.Row="2" Grid.Column="0" Content="Pilot Login" VerticalAlignment="Center" HorizontalAlignment="Left" 
                FontSize="40" FontFamily="Segoe UI" Foreground="Black" FontWeight="SemiBold"/>
         <Label Grid.Row="3" Grid.Column="0" Content="Contact Number/Email" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"/>
-        <TextBox Grid.Row="4" Grid.Column="0" Text="{Binding Email_PhoneNo}" Margin="10,0,10,0" BorderThickness="1"  BorderBrush="#A9ABB1"  Background="White"  VerticalContentAlignment="Center">
+        <TextBox Grid.Row="4" Grid.Column="0" Text="{Binding Email_PhoneNo}" Margin="10,0,10,0" 
+                 BorderThickness="1"  
+                 BorderBrush="#A9ABB1"  
+                 Background="White"  
+                 VerticalContentAlignment="Center"
+                 PreviewKeyDown="TextBox_PreviewKeyDown">
             <TextBox.Resources>
                 <Style TargetType="{x:Type TextBox}">
                     <Style.Resources>
