Validation and Placeholders

--- a/ideaForge/App.xaml
+++ b/ideaForge/App.xaml
@@ -12,7 +12,10 @@
         <Color x:Key="AccentBaseColor">#FFD80073</Color>-->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                 <!--MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive!--> 
+                <ResourceDictionary>
+           
+                </ResourceDictionary>
+                <!--MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive!--> 
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                  <!--Theme setting--> 
