--- a/ideaForge/Login.xaml
+++ b/ideaForge/Login.xaml
@@ -12,7 +12,7 @@
         mc:Ignorable="d"
       x:Name="loginWindow"
                  SizeChanged="loginWindow_SizeChanged"
-        Title="Login" Height="600" Width="1000">
+        Height="600" Width="1000">
     <Window.DataContext>
         <vm:LoginPageViewModel/>
     </Window.DataContext>
