--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -12,7 +12,7 @@
         mc:Ignorable="d"
                       xmlns:converters="clr-namespace:ideaForge.Converters"
       x:Name="loginWindow"
-        Title="Dashboard" Height="620" Width="1000">
+       Height="620" Width="1000">
     <Controls:MetroWindow.DataContext>
            <vm:DashboardViewModel/>
     </Controls:MetroWindow.DataContext>
